2012-07-26  Balazs Kelemen  <kbalazs@webkit.org>

        Unreviewed speculative buildfix after r123729.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::runTest): Fix sign errors.

2012-07-26  Zoltan Nyul  <zoltan.nyul@intel.com>

        [EFL] EFL port should use XDG paths
        https://bugs.webkit.org/show_bug.cgi?id=91719

        Reviewed by Kenneth Rohde Christiansen.

        The appcache/localstorage/webdatabase path should be set in the
        ewk_main.cpp instead of the DumpRenderTree, and the XDG_DATA_HOME and
        XDG_CACHE_HOME should be set to different directory for each processes
        for the layout-tests.

        * DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
        (DumpRenderTreeChrome::initialize):
        * Scripts/webkitpy/layout_tests/port/efl.py:
        (EflPort.setup_environ_for_server):
        * efl/jhbuild.modules:

2012-07-26  Balazs Kelemen  <kbalazs@webkit.org>

        [NRWT] should have a way to restrict pixel tests for individual directories
        https://bugs.webkit.org/show_bug.cgi?id=91754

        Reviewed by Dirk Pranke.

        Added --pixel-test-directories option to nrwt. It implies --pixel-tests.
        If the platform supports this option only tests from these directories will
        be executed as pixel tests. Furthermore, platforms can have a default set of
        pixel test directories. To support the feature the test harness have to be
        able to inform the driver whether to dump pixels for each tests. For this
        purpose I changed WTR and the Qt DRT to handle a --pixel-test argument from
        the standard output and made NRWT use this argument with these drivers.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        (WebCore::DumpRenderTree::open):
        (WebCore::DumpRenderTree::processLine):
        (WebCore::DumpRenderTree::setDumpPixelsForAllTests):
        (WebCore::DumpRenderTree::dump):